--- a/src/app/feature/feature.component.html
+++ b/src/app/feature/feature.component.html
@@ -2,4 +2,7 @@
   <h1>MFE 1</h1>
   <p>{{ "MFE1.HELLO.MESSAGE" | translate }} message with translate pipe</p>
   <p>{{ helloFromService }} message with translate service</p>
+  <a (click)="onOpenMfe()">
+    Go to MFE 2
+  </a>
 </main>
